tests/specs/ecosystem/radix_ui_fork/react_slot/0_0_5.test
radix-ui-fork/react-slot/0.0.5
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --

error: TS2304 [ERROR]: Cannot find name 'HTMLElement'.
interface SlotProps extends React.HTMLAttributes<HTMLElement> {
                                                 ~~~~~~~~~~~
    at file://<tmpdir>/src/Slot.tsx:2:50

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
const Slot: React.ForwardRefExoticComponent<SlotProps & React.RefAttributes<HTMLElement>> = {} as never;
                                                                            ~~~~~~~~~~~
    at file://<tmpdir>/src/Slot.tsx:5:77

Found 2 errors.

